kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convoyslit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: convoyslit
  template:
    metadata:
      labels:
        app: convoyslit
    spec:
      containers:
        - image: gcr.io/buffer-data/convoyslit:0.8.1
          imagePullPolicy: Always
          name: convoyslit
          volumeMounts:
            - name: bigquery-google-cloud-credentials
              mountPath: /var/secrets/google
      restartPolicy: Always
      volumes:
        - name: bigquery-google-cloud-credentials
          secret:
            secretName: bigquery-key
