kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: convoyslit-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
  selector:
    app: convoyslit
  type: LoadBalancer
  loadBalancerSourceRanges:
    - 52.23.94.19/32
